--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/togeojson": "^0.16.2",
+    "@next/swc-win32-x64-msvc": "^14.0.4",
+    "@turf/turf": "^6.5.0",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "leaflet-omnivore": "^0.3.4",
+    "leaflet.markercluster": "^1.5.3",
     "next": "14.0.4",
     "proj4": "^2.10.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "shpjs": "^4.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
